--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>test</h1>
+    <h3>test</h3>
     <p>test</p>
     <ul>
-      <li>Timothy : 160419007</li>
+      <li>Timothy : 160419005</li>
       <li>alias : 160419004</li>
     </ul>
+    <p>contoh paragrah</p>
   </body>
 </html>
