--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>test</h1>
     <p>test</p>
     <ul>
-      <li>Timothy : 160419007</li>
       <li>alias : 160419004</li>
     </ul>
+    <p>coba lol</p>
   </body>
 </html>
